--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -135,8 +135,8 @@
     <string name="minimum_magnitude_title">Magnitud mínima alerta</string>
     <string name="min_magnitude_dialog_title">Magnitud mínima</string>
     <string name="min_magnitude_dialog_message">Sismos mayores que … \nEjemplo: 5.6, 3.5, 2.9, etc.</string>
-    <string name="improvement_1">- Nuevo sistema de notificaciones: alertas de sismos preliminares, alertas con magnitudes personalizables y alertas de alta prioridad. (Véase sección configuraciones)</string>
-    <string name="improvement_2">- Mejoras de estabilidad de sistema</string>
+    <string name="improvement_1">- Nuevo icono para sismos verificados</string>
+    <string name="improvement_2">- Permiso de notificaciones para Android 13</string>
     <string name="activate_button">Activar</string>
     <string name="alert_permission_description">Este dispositivo cuenta con Android 13. Para recibir alertas de sismos se requiere activar el permiso para notificaciones</string>
     <string name="alert_permission_title">Permiso para alertas sísmicas</string>
@@ -148,4 +148,6 @@
     <string name="cd_reference_icon">Icono referencia geográfica</string>
     <string name="cd_hour_icon">Icono tiempo</string>
     <string name="empty_list">No hay contenido para mostrar</string>
+    <string name="improvement_3">- Rediseño sección mapa</string>
+    <string name="improvement_4">- Política de privacidad agregada</string>
 </resources>
