--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -150,4 +150,7 @@
     <string name="empty_list">No content to show</string>
     <string name="improvement_3">- Map section redesign</string>
     <string name="improvement_4">- Added privacy policy</string>
+    <string name="NOTIFICATION_PERMISSION_OFF">You will not receive alerts</string>
+    <string name="NOTIFICATION_PERMISSION_ON">You will receive alerts</string>
+
 </resources>
