No otorgar permiso bloquea settings preferences en android 13 #40
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -150,6 +150,7 @@
     <string name="empty_list">No hay contenido para mostrar</string>
     <string name="improvement_3">- Rediseño sección mapa</string>
     <string name="improvement_4">- Política de privacidad agregada</string>
-    <string name="NOTIFICATION_PERMISSION_OFF">No recibirás alertas</string>
-    <string name="NOTIFICATION_PERMISSION_ON">Recibirás alertas</string>
+    <string name="notification_permission_off">No recibirás alertas</string>
+    <string name="notification_permission_on">Recibirás alertas</string>
+    <string name="permission_totally_disabled">Permiso desactivado, reinstala para activarlo</string>
 </resources>
