--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -93,9 +93,8 @@
     <string name="SHARE_DEPTH">Profundidad</string>
     <string name="SHARE_GEO_REF">Georeferencia</string>
     <string name="SHARE_DOWNLOAD_MSG"><![CDATA[Descarga la app aquí ->]]></string>
-    <string name="email_chooser_title">Envia un email usando:</string>
+    <string name="email_chooser_title">Envía un email usando:</string>
     <string name="email_subject">Contacto desarrollador LastQuakeChile</string>
-    <string name="email_intent_fail">No tienes ninguna app de email para contactarnos</string>
     <string name="retry">Reintentar</string>
     <string name="service_error">Servidor de sismos no disponible</string>
     <string name="menu_reload_title">Recargar</string>
@@ -135,8 +134,6 @@
     <string name="minimum_magnitude_title">Magnitud mínima alerta</string>
     <string name="min_magnitude_dialog_title">Magnitud mínima</string>
     <string name="min_magnitude_dialog_message">Sismos mayores que … \nEjemplo: 5.6, 3.5, 2.9, etc.</string>
-    <string name="improvement_1">- Nuevo icono para sismos verificados</string>
-    <string name="improvement_2">- Permiso de notificaciones para Android 13</string>
     <string name="activate_button">Activar</string>
     <string name="alert_permission_description">Este dispositivo cuenta con Android 13. Para recibir alertas de sismos se requiere activar el permiso para notificaciones</string>
     <string name="alert_permission_title">Permiso para alertas sísmicas</string>
@@ -148,8 +145,6 @@
     <string name="cd_reference_icon">Icono referencia geográfica</string>
     <string name="cd_hour_icon">Icono tiempo</string>
     <string name="empty_list">No hay contenido para mostrar</string>
-    <string name="improvement_3">- Rediseño sección mapa</string>
-    <string name="improvement_4">- Política de privacidad agregada</string>
     <string name="notification_permission_off">No recibirás alertas</string>
     <string name="notification_permission_on">Recibirás alertas</string>
     <string name="permission_totally_disabled">Permiso desactivado, reinstala para activarlo</string>
