--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -57,7 +57,7 @@
     <string name="JAN">Enero</string>
     <string name="FEB">Febrero</string>
     <string name="MAR">Marzo</string>
-    <string name="APR">April</string>
+    <string name="APR">Abril</string>
     <string name="MAY">Mayo</string>
     <string name="JUN">Junio</string>
     <string name="JUL">Julio</string>
