--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -31,9 +31,19 @@
     <string name="alert_pref_summary_off">Desactivadas</string>
     <string name="alert_pref_summary_on">Activadas</string>
     <string name="alert_pref_title">Notificaciones</string>
+    <string name="ads_title">Publicidad</string>
     <string name="alert_pref_title_switch">Alertas de sismos</string>
     <string name="alert_pref_summary">Recibe notificaciones de sismos</string>
     <string name="night_mode_manual_pref_summary_off">Desactivado</string>
+
+
+    Expand Down
+
+
+    Expand Up
+
+    @@ -142,4 +143,6 @@
+
     <string name="night_mode_manual_pref_summary_on">Activado</string>
     <string name="night_mode_pref_summary">Ahorra batería y evita tu cansancio ocular</string>
     <string name="night_mode_pref_title">Modo noche</string>
@@ -142,4 +152,6 @@
     <string name="notification_permission_off">No recibirás alertas</string>
     <string name="notification_permission_on">Recibirás alertas</string>
     <string name="permission_totally_disabled">Permiso desactivado, reinstala para activarlo</string>
+    <string name="consent_privacy_preference_title">Política de consentimiento</string>
+    <string name="conset_privacy_preference_subtitle">Publicidad personalizada</string>
 </resources>
