--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -155,4 +155,5 @@
     <string name="permission_totally_disabled">Permiso desactivado, reinstala para activarlo</string>
     <string name="consent_privacy_preference_title">Política de consentimiento</string>
     <string name="conset_privacy_preference_subtitle">Publicidad personalizada</string>
+    <string name="google_map_screenshot">Captura de pantalla de google maps</string>
 </resources>
