Agregado intent para instagram feed
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -156,5 +156,6 @@
     <string name="conset_privacy_preference_subtitle">Personalized advertising</string>
     <string name="moment_magnitude_w">Moment magnitude w phase (Mww)</string>
     <string name="google_map_screenshot">Google map screenshot</string>
+    <string name="stories">Stories</string>
 
 </resources>
