--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="API_URL" translatable="false">https://lqch.figonzal.cl/</string>
     <string name="ROOM_DB_NAME" translatable="false">lqch_database</string>
-    <string name="DEEP_LINK" translatable="false">https://lastquakechile.page.link/lqch</string>
+    <string name="APP_LINK" translatable="false">https://play.google.com/store/apps/details?id=cl.figonzal.lastquakechile&amp;pcampaignid=web_share</string>
     <string name="CRONITOR_STATUS" translatable="false">https://lqch.cronitorstatus.com/</string>
     <string name="PRIVACY_POLICY_URL_EN" translatable="false">https://github.com/figonzal1/LastQuakeChile/blob/main/privacy_policy_en.md</string>
     <string name="PRIVACY_POLICY_URL_ES" translatable="false">https://github.com/figonzal1/LastQuakeChile/blob/main/privacy_policy_es.md</string>
